crates/vexor-compiler/tests/golden/error/input/functions.vx
fn double(x) = x * 2

// too many arguments
let result = double(1, 2, 3)
export Circle(result)
